# altur-technical-interview

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  database.py  main.py  models.py  pyproject.toml
backend/routes/: calls.py
backend/services/: llm_service.py  stt_service.py
backend/tests/: test_api.py
frontend/: Dockerfile  jest.config.js  package.json
frontend/__tests__/: api.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/calls/[id]/: page.tsx
frontend/components/: AudioPlayer.tsx  CallsList.tsx  CustomSelect.tsx  FileUpload.tsx  Header.tsx  UploadModal.tsx
frontend/lib/: api.ts
frontend/types/: call.ts
