[project]
name = "backend"
version = "0.1.0"
description = "Audio Transcription & Analysis Backend API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.0.0",
    "pytest>=7.0.0",
    "httpx>=0.24.0",
    "dotenv>=0.9.9",
    "pydub>=0.25.1",
    "audioop-lts>=0.2.2",
]
